# jaegun

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/jaegun/: __init__.py  auth_jwt.py  config.py  db.py  main.py  models.py  security.py
src/jaegun/api/: admin.py  announcements.py  auth_api.py  big_meeting.py  board.py  events.py  meetings.py  member.py  orgs.py  plans.py
static/admin/: app.js  index.html  styles.css
static/community/: app.js  auth-header.js  index.html  login.html  login.js  register.html  register.js  signup.html  signup.js  styles.css
